# ai-skill-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  bulk_visibility.sh  pyproject.toml  scanner.py
.github/workflows/: ci.yml  oidc-demo.yml  release.yml  scan-url.yml  signature-pin.yml
ai_skill_scanner/: __init__.py  astcheck.py  cli.py  entropy.py  rules.py  sarif.py  scanning.py  signatures.py
tests/: malicious_skill.py  test_scanner.py
