[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-skill-scanner"
version = "1.2.0"
description = "Standalone scanner for public AI agent skills. Detects code execution risks, exfiltration callbacks, prompt injection, obfuscation, and supply chain threats."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
authors = [
    {name = "cftcai"}
]
keywords = ["ai", "security", "scanner", "skills", "agent", "prompt-injection", "exfiltration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine", "ruff", "mypy"]

[project.scripts]
ai-skill-scanner = "scanner:main"

[project.urls]
Homepage = "https://github.com/cftcai/ai-skill-scanner"
Repository = "https://github.com/cftcai/ai-skill-scanner"
Issues = "https://github.com/cftcai/ai-skill-scanner/issues"

[tool.setuptools]
py-modules = ["scanner"]

[tool.ruff]
line-length = 120
target-version = "py311"
# The malicious fixture is intentional bad code (a detection sample), not
# maintained source; do not lint or reformat it.
extend-exclude = ["tests/malicious_skill.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled separately; long regex literals are intentional

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false